--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 
-title: Sergio Junior's Data Science Portfolio7
-description: I've created this portfolio to showcase my work to potential employers.
+title: Data Science Projects
+description: I've created this portfolio to showcase my work to potential employers
 
 google_analytics: G-9JQ1TWPGPR
