Changing the theme to minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 
 title: Data Science Projects
 description: I've created this portfolio to showcase my work to potential employers
