--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 
 title: Sergio Junior
+logo: /images/photo.jpg
 description: Data Science portfolio to showcase some projects I've developed over time
 
 google_analytics: G-9JQ1TWPGPR
