--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,7 @@ logo: /images/photo.jpg
 description: Data Science portfolio to showcase some projects I've developed over time
 
 google_analytics: G-9JQ1TWPGPR
+
+minima:
+  social_links:
+    linkedin: juniorsergio
