--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 theme: jekyll-theme-minimal
 
 title: Sergio Junior
-author:
-  name: Sergio Junior
-  email: sergio.junior55@hotmail.com
+email: sergio.junior55@hotmail.com
 logo: /images/photo.jpg
 description: Data Science portfolio to showcase some projects I've developed over time
 
 google_analytics: G-9JQ1TWPGPR
 
-minima:
-  social_links:
-    linkedin: juniorsergio
+social_links: true
+linkedin: juniorsergio
