--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,5 @@ google_analytics: G-9JQ1TWPGPR
 github:
   is_project_page: false
   is_user_page: true
+  owner_name: Sergio Junior
+  owner_url: https://www.linkedin.com/in/juniorsergio/
