--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ theme: jekyll-theme-minimal
 title: Sergio Junior
 logo: /images/photo.jpg
 description: Data Science portfolio to showcase some projects I've developed over time
+email: sergio.junior55@hotmail.com
 
 google_analytics: G-9JQ1TWPGPR
 
