Update google analytics ID

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ logo: /images/photo.jpg
 description: Data Science portfolio to showcase some projects I've developed over time
 email: sergio.junior55@hotmail.com
 
-google_analytics: G-9JQ1TWPGPR
+google_analytics: G-L5DKNEFTBC
 
 github:
   is_project_page: false
