--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
