--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^21.8.13",
     "i18next-browser-languagedetector": "^6.1.4",
     "interweave": "^13.0.0",
+    "js-cookie": "^3.0.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -22,6 +23,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
