--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
