--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "interweave": "^13.0.0",
     "js-cookie": "^3.0.1",
-    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.18.0",
+    "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.5"
   },
