refactor: absolute import with @app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "composite": true,
-    "baseUrl": "src"
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["src/*"]
+    },
   },
   "include": [
     "src",
