--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   },
   "dependencies": {
     "interweave": "^13.0.0",
-    "js-cookie": "^3.0.1",
     "react": "^18.0.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
