--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/react-dom": "^18.2.14",
+    "@types/styled-components": "^5.1.29",
     "@vitejs/plugin-react": "^1.3.0",
     "gh-pages": "^4.0.0",
     "typescript": "^4.6.3",
